reworked IA...add some pages and initial content

--- a/_includes/carry_culture_cta.html
+++ b/_includes/carry_culture_cta.html
@@ -2,7 +2,7 @@
   header = "Become a culture carrier."
   text = "Join our team of talented technologists working together to cultivate an incredible culture."
   text_css_class = "page-subfooter-text-col"
-  cta_path = "/careers/"
+  cta_path = "/careers/join/"
   cta = "Join Skylight"
   icon_css_class = "fa fa-chevron-right"
 %}
