--- a/_includes/hero_banner.html
+++ b/_includes/hero_banner.html
@@ -1,5 +1,5 @@
 <div class="hero hero-banner mb-5 {% if include.color %}bg-{{ include.color }}{% endif %}" {% if include.image %}style="background-image: url({{ include.image }});"{% endif %}>
-  <div class="hero-container container-fluid text-center page--careers__text">
+  <div class="hero-container container-fluid text-center page--join__text">
     <h1 class="hero-heading {% if include.text == 'dark' %}text-ink{% endif %}">
       {% if include.hero_title %}
         {{ include.hero_title }}
