--- a/_includes/hire_us_cta.html
+++ b/_includes/hire_us_cta.html
@@ -2,7 +2,7 @@
   header = "Let's deliver together."
   text = "However bold the idea or complex the problem, we work with you to deliver results in weeks, not years."
   text_css_class = "page-subfooter-text-col"
-  cta_path = "/contact/"
+  cta_path = "/connect/contact/"
   cta = "Contact Us"
   icon_css_class = "fa fa-chevron-right"
 %}
