--- a/_includes/join_us_cta.html
+++ b/_includes/join_us_cta.html
@@ -2,7 +2,7 @@
   header = "Change lives every day."
   text = "We need great technologists, designers, and more to work on changing how the government serves the public."
   text_css_class = "page-subfooter-text-col"
-  cta_path = "/careers/"
+  cta_path = "/careers/join/"
   cta = "Join Us"
   icon_css_class = "fa fa-chevron-right"
 %}
