--- a/_includes/open_positions.html
+++ b/_includes/open_positions.html
@@ -37,6 +37,6 @@
 {% else %}
   <p>
     We're not currently hiring at the moment, but that can change quickly.
-    So please don't hesitate to <a href="/careers/#application">apply</a>!
+    So please don't hesitate to <a href="mailto:hello@skylight.digital">>get in touch</a>!
   </p>
 {% endif %}
