--- a/_sass/pages/_manifest.scss
+++ b/_sass/pages/_manifest.scss
@@ -7,7 +7,7 @@
 @import 'culture';
 @import 'policies';
 @import 'policy';
-@import 'careers';
+@import 'join';
 @import 'ditap';
 @import 'form_pages';
 @import 'blog';
@@ -15,3 +15,5 @@
 @import 'filter';
 @import 'contracting';
 @import 'toolkits';
+@import 'talks';
+@import 'press';
