--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,7 @@
 
   <div class="footer-content">
     <div class="footer-brand">
-      <a class="footer-brandmark">
-        HUBZone Certified
-      </a>
+      <a class="footer-brandmark">HUBZone Certified</a>
     </div>
 
     <nav class="footer-nav">
@@ -13,9 +11,10 @@
           <div class="footer-links">
             <h4>Company</h4>
             <ul>
-              <li><a href="/company/about/">About</a></li>
-              <li><a href="/about/culture/">Culture</a></li>
-              <li><a href="/company/policies/">Policies</a></li>
+              <li><a href="/company/about/">About Us</a></li>
+              <li><a href="/company/culture/">Our Culture</a></li>
+              <li><a href="/company/press/">Press</a></li>
+              <li><a href="/company/policies/">Our Policies</a></li>
             </ul>
           </div>
         </div>
@@ -24,10 +23,28 @@
           <div class="footer-links">
             <h4>Work</h4>
             <ul>
-              <li><a href="/work/services/">Services</a></li>
-              <li><a href="/work/experience/">Experience</a></li>
+              <li><a href="/work/services/">Our Services</a></li>
+              <li><a href="/work/experience/">Our Experience</a></li>
               <li><a href="/work/toolkits/">Toolkits</a></li>
-              <li><a href="/work/contracting/">Contracting</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer-link-group">
+          <div class="footer-links">
+            <h4>Careers</h4>
+            <ul>
+              <li><a href="/careers/join/">Join Us</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer-link-group">
+          <div class="footer-links">
+            <h4>Thoughts</h4>
+            <ul>
+              <li><a href="/thoughts/blog/">Blog</a></li>
+              <li><a href="/thoughts/talks/">Talks</a></li>
             </ul>
           </div>
         </div>
@@ -36,9 +53,8 @@
           <div class="footer-links">
             <h4>Connect</h4>
             <ul>
-              <li><a href="/blog/">Blog</a></li>
-              <li><a href="/careers/">Careers</a></li>
-              <li><a href="/contact/">Contact</a></li>
+              <li><a href="/connect/contact/">Contact Us</a></li>
+              <li><a href="/connect/contracting/">Contracting</a></li>
             </ul>
           </div>
         </div>
