--- a/_includes/post.html
+++ b/_includes/post.html
@@ -38,7 +38,7 @@
         {% if page.tags.size > 0 %}
           <div class="post-tags">
             {% for tag in page.tags %}
-              <a href="/blog/tag/{{tag | slugify}}/" class="tag-badge">{{tag}}</a>
+              <a href="/thoughts/blog/tag/{{tag | slugify}}/" class="tag-badge">{{tag}}</a>
             {% endfor %}
           </div>
         {% endif %}
