--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
       <a class="footer-brandmark">HUBZone Certified</a>
     </div>
 
-    <nav class="footer-nav">
+    <nav class="footer-nav offset-sm-1 offset-md-0">
       <div class="footer-link-groups">
         <div class="footer-link-group">
           <div class="footer-links">
