Fix dropdown width issue

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -142,6 +142,7 @@
   @include media-breakpoint-up(sm) {
     border: 1px solid #d2aa56;
     margin-top: -1px;
+    min-width: 9rem;
     z-index: 1;
   }
 }
