Add impact statement to open positions

--- a/_includes/open_positions.html
+++ b/_includes/open_positions.html
@@ -14,6 +14,7 @@
             {{ item.title }}
           </a>
           <p><i class="fa fa-globe mr-2"></i>{{ item.location }}</p>
+          <p class="mt-1">Optional impact sentence about what this role does and what makes it special. What makes this role meaningful, beyond just being a job.</p>
         </li>
       {% endfor %}
       </ul>
