--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -34,3 +34,11 @@
 .text-ink {
   color: $black;
 }
+
+.container-lg {
+  max-width: map-get($container-max-widths, "lg");
+}
+
+.container-md {
+  max-width: map-get($container-max-widths, "md");
+}
