Add initial press page designs

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -42,3 +42,7 @@
 .container-md {
   max-width: map-get($container-max-widths, "md");
 }
+
+.container-sm {
+  max-width: map-get($container-max-widths, "sm");
+}
