Typeset contracting page

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -157,3 +157,9 @@ h1 {
   margin-bottom: 0.5em;
   margin-top: 1.5em;
 }
+
+.prose {
+  h1, h2, h3, h4, h5, h6 {
+    @extend .margin-heading;
+  }
+}
