Add training placeholder

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -160,6 +160,12 @@ h1 {
 
 .prose {
   h1, h2, h3, h4, h5, h6 {
-    @extend .margin-heading;
+    margin-bottom: 0.5em;
+  }
+
+  * + {
+    h1, h2, h3, h4, h5, h6 {
+      margin-top: 1.5em;
+    }
   }
 }
