Add services first pass

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -31,6 +31,10 @@
   background-color: $sk-blue;
 }
 
+.bg-gray-light {
+  background-color: $brand-gray-light;
+}
+
 .text-ink {
   color: $black;
 }
