change footer link names

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,10 +11,10 @@
           <div class="footer-links">
             <h4>Company</h4>
             <ul>
-              <li><a href="/company/about/">About Us</a></li>
-              <li><a href="/company/culture/">Our Culture</a></li>
+              <li><a href="/company/about/">About</a></li>
+              <li><a href="/company/culture/">Culture</a></li>
               <li><a href="/company/press/">Press</a></li>
-              <li><a href="/company/policies/">Our Policies</a></li>
+              <li><a href="/company/policies/">Policies</a></li>
             </ul>
           </div>
         </div>
@@ -23,8 +23,8 @@
           <div class="footer-links">
             <h4>Work</h4>
             <ul>
-              <li><a href="/work/services/">Our Services</a></li>
-              <li><a href="/work/experience/">Our Experience</a></li>
+              <li><a href="/work/services/">Services</a></li>
+              <li><a href="/work/experience/">Experience</a></li>
               <li><a href="/work/toolkits/">Toolkits</a></li>
             </ul>
           </div>
@@ -34,7 +34,7 @@
           <div class="footer-links">
             <h4>Careers</h4>
             <ul>
-              <li><a href="/careers/join/">Join Us</a></li>
+              <li><a href="/careers/join/">Join</a></li>
             </ul>
           </div>
         </div>
@@ -53,7 +53,7 @@
           <div class="footer-links">
             <h4>Connect</h4>
             <ul>
-              <li><a href="/connect/contact/">Contact Us</a></li>
+              <li><a href="/connect/contact/">Contact</a></li>
               <li><a href="/connect/contracting/">Contracting</a></li>
             </ul>
           </div>
