Fix sidebar active link

--- a/_sass/_sidenav.scss
+++ b/_sass/_sidenav.scss
@@ -17,28 +17,37 @@
       @extend %mb-2;
     }
 
-    border-left: 7px solid $white;
-    padding-left: .5rem;
-
     &:hover,
     &:focus {
-      border-left: 4px solid $nav-link-border-color;
-      padding-left: 11px;
-    }
-
-    .active {
+      a {
         position: relative;
 
         &:after {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            margin-left: -15px;
-            padding-left: 11px;
-            border-left: 4px solid $nav-link-border-color;
-            content: "";
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          left: 0;
+          margin-left: -16px;
+          padding-left: 11px;
+          border-left: 4px solid $nav-link-border-color;
+          content: "";
         }
+      }
+    }
+
+    .active {
+      position: relative;
+
+      &:after {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        margin-left: -16px;
+        padding-left: 11px;
+        border-left: 4px solid $nav-link-border-color;
+        content: "";
+      }
     }
   }
 
