Add setup for toolkits and placeholder text

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -227,7 +227,7 @@ $nav-link-color: $body-color;
 $nav-link-decoration: none;
 $nav-link-hover-color: $nav-link-color;
 $nav-link-hover-decoration: none;
-$nav-link-border-color: $brand-primary-dark;
+$nav-link-border-color: $brand-warning;
 
 $nav-toggler-color: $nav-link-color;
 $nav-toggler-hover-color: $brand-primary;
