Update nav order ar mobile

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -50,3 +50,23 @@
 .container-sm {
   max-width: map-get($container-max-widths, "sm");
 }
+
+.order-1 {
+  order: 1;
+}
+
+.order-2 {
+  order: 2;
+}
+
+.order-md-1 {
+  @include media-breakpoint-up(md) {
+    order: 1;
+  }
+}
+
+.order-md-2 {
+  @include media-breakpoint-up(md) {
+    order: 2;
+  }
+}
