--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -8,9 +8,9 @@ layout: default
 %}
 
 <div class="container">
-  <div class="row">
-    <div class="sidenav col-12 col-md-3 d-none d-md-block">
-      <div class="is-sticky">
+  <div class="row d-flex">
+    <div class="sidenav col-12 col-md-3 order-2 order-md-1">
+      <div class="toolkit-sticky">
         <nav class="subnav-col px-0" id="sidenav">
           <ul role="presentation">
            {% for item in site.data.toolkits.digital_talent_management %}
@@ -22,7 +22,7 @@ layout: default
         </nav>
       </div>
     </div>
-    <section class="col-12 col-md-9 page--toolkit text prose">
+    <section class="col-12 col-md-9 page--toolkit text prose order-1 order-md-2">
       {{ page.content | markdownify }}
     </section>
   </div>
