Update toolkit banner color to blue

--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -4,7 +4,7 @@ layout: default
 
 {% include hero_banner.html
   hero_content = page.hero_content
-  color = "green"
+  color = "blue"
 %}
 
 <div class="container">
