Change toolkit heading markup to paragraph text

--- a/_includes/hero_banner.html
+++ b/_includes/hero_banner.html
@@ -1,12 +1,12 @@
-<div class="hero hero-banner mb-5 {% if include.color %}bg-{{ include.color }}{% endif %}" {% if include.image %}style="background-image: url({{ include.image }});"{% endif %}>
+<section class="hero hero-banner mb-5 {% if include.color %}bg-{{ include.color }}{% endif %}" {% if include.image %}style="background-image: url({{ include.image }});"{% endif %}>
   <div class="hero-container container-fluid text-center page--join__text">
-    <h1 class="hero-heading {% if include.text == 'dark' %}text-ink{% endif %}">
+    <{% if page.layout == "toolkit" %}p{% else %}h1{% endif %} class="hero-heading {% if include.text == 'dark' %}text-ink{% endif %}">
       {% if include.hero_title %}
         {{ include.hero_title }}
       {% else %}
         {{ page.title }}
       {% endif %}
-    </h1>
+    </{% if page.layout == "toolkit" %}p{% else %}h1{% endif %}>
     <p class="hero-content {% if include.text == 'dark' %}text-ink{% endif %}">
       {% if page.layout == "toolkit" %}
         {{ site.data.toolkits[page.sidenav].description }}
@@ -15,4 +15,4 @@
       {% endif %}
     </p>
   </div>
-</div>
+</section>
