Make toolkit title dynamic from data file

--- a/_includes/hero_banner.html
+++ b/_includes/hero_banner.html
@@ -3,6 +3,8 @@
     <{% if page.layout == "toolkit" %}p{% else %}h1{% endif %} class="hero-heading {% if include.text == 'dark' %}text-ink{% endif %}">
       {% if include.hero_title %}
         {{ include.hero_title }}
+      {% elsif page.layout == "toolkit" %}
+        {{ site.data.toolkits[page.sidenav].title }}
       {% else %}
         {{ page.title }}
       {% endif %}
