Add services banner img

--- a/_includes/hero_banner.html
+++ b/_includes/hero_banner.html
@@ -1,4 +1,14 @@
-<header class="hero hero-banner mb-5 {% if include.color %}bg-{{ include.color }}{% endif %}" {% if include.image %}style="background-image: url({{ include.image }});"{% endif %}>
+<header class="hero hero-banner mb-5
+  {% if include.color %}
+    bg-{{ include.color }}
+  {% endif %}"
+  {% if include.image %}
+    style="
+      background-image: url(/img/{{ include.image }});
+      background-repeat: no-repeat;
+      background-size: cover;"
+    {% endif %}
+  >
   <div class="hero-container container-fluid text-center page--join__text">
     <{% if page.layout == "toolkit" %}p{% else %}h1{% endif %} class="hero-heading {% if include.text == 'dark' %}text-ink{% endif %}">
       {% if include.hero_title %}
