--- a/_includes/open_positions.html
+++ b/_includes/open_positions.html
@@ -33,7 +33,7 @@
     For most roles, we also offer apprenticeship opportunities for post-graduate
     professionals and internship opportunities for current or recent college graduates.
     If you're interested in an apprenticeship or internship,
-    please <a href="mailto:hello@skylight.digital">>get in touch</a>.
+    please <a href="mailto:hello@skylight.digital">get in touch</a>.
   </p>
 {% else %}
   <p>
