--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -144,9 +144,9 @@ $font-size-xs: $font-size-xxx-small;
 $line-height-base: 1.7;
 
 $font-size-h1: 4rem;
-$font-size-h2: 3rem;
-$font-size-h3: 1.75rem;
-$font-size-h4: 1.5rem;
+$font-size-h2: $font-size-xxx-large;
+$font-size-h3: $font-size-x-large;
+$font-size-h4: $font-size-small;
 $font-size-h5: 1.25rem;
 
 $font-weight-normal: 400;
