Update font sizes

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -1,5 +1,5 @@
 .header-display-1 {
-  font-size: $header-display-1;
+  font-size: $header-display;
 }
 
 .header-page {
@@ -7,15 +7,15 @@
 }
 
 .header-display-2 {
-  font-size: $header-display-2;
+  font-size: $header-display-1;
 }
 
 .header-display-4 {
-  font-size: $header-display-4;
+  font-size: $header-display-3;
 }
 
 .header-display-5 {
-  font-size: $header-display-5;
+  font-size: $header-display-4;
 }
 
 h1,
