--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -25,7 +25,7 @@
 <header class="{{header_class}}">
   <div class="row">
     <div class="{{header_title_class}}">
-      <h1>{{header_title}}</h1>
+      <h1 class="header-display-1">{{header_title}}</h1>
     </div>
   </div>
 
