--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -143,7 +143,8 @@ $font-size-xs: $font-size-xxx-small;
 
 $line-height-base: 1.7;
 
-$font-size-h1: 4rem;
+$font-size-display: 4rem;
+$font-size-h1: $font-size-xxxxx-large;
 $font-size-h2: $font-size-xxx-large;
 $font-size-h3: $font-size-x-large;
 $font-size-h4: $font-size-small;
@@ -204,6 +205,7 @@ $text-link-hover-color: $link-hover-color;
 $text-link-border: 1px dotted $link-color;
 $text-link-border-hover: 1px solid $link-hover-color;
 
+$header-display: $font-size-display;
 $header-display-1: $font-size-h1;
 $header-display-2: $font-size-h2;
 $header-display-3: $font-size-h3;
