--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -141,6 +141,10 @@ h1 {
   }
 }
 
+.left-justified-list {
+  @extend %left-justified-list;
+}
+
 %list-item-unstyled {
   li::before {
     border-radius: 0;
