--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -31,6 +31,11 @@
   background-color: $sk-blue;
 }
 
+.bg-gray {
+  background-color: $gray-light;
+}
+
+
 .bg-gray-light {
   background-color: $brand-gray-light;
 }
