Add Accessibility toolkit

--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -22,7 +22,7 @@ layout: default
       </div>
     </div>
     <section class="col-12 col-md-9 page--toolkit text prose order-1 order-md-2">
-      {{ page.content | markdownify }}
+      {{ content }}
     </section>
   </div>
 </div>
