Update code style color and size

--- a/_sass/bootstrap/_variables.scss
+++ b/_sass/bootstrap/_variables.scss
@@ -954,10 +954,10 @@ $close-text-shadow:           0 1px 0 $white !default;
 
 // Code
 
-$code-font-size:              90% !default;
+$code-font-size:              80% !default;
 $code-padding-x:              .4rem !default;
 $code-padding-y:              .2rem !default;
-$code-color:                  #bd4147 !default;
+$code-color:                  $black !default;
 $code-bg:                     $gray-lightest !default;
 
 $kbd-color:                   $white !default;
