Remove sticky sidenav style from toolkits

--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -9,7 +9,7 @@ layout: default
 <div class="container">
   <div class="row d-flex">
     <div class="sidenav col-12 col-md-3 order-2 order-md-1">
-      <div class="toolkit-sticky">
+      <div class="">
         <nav class="subnav-col px-0" id="sidenav">
           <ul role="presentation">
            {% for item in site.data.toolkits[page.sidenav].toc %}
