--- a/_sass/pages/_services.scss
+++ b/_sass/pages/_services.scss
@@ -2,3 +2,11 @@
   @extend %page-main-base;
   @extend %wide-column;
 }
+
+.page-our-services {
+  .prose {
+    li {
+      padding-bottom: 1rem;
+    }
+  }
+}
