Add sticky hover fix to experience accordion

--- a/_sass/_accordion.scss
+++ b/_sass/_accordion.scss
@@ -93,3 +93,9 @@
     }
   }
 }
+
+// Sticky hover fix
+.can-touch .accordion-filter .accordion-header a:hover {
+  background-color: $gray-lightest;
+}
+
