Add pagination to experience page and grey out unused filters

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -230,6 +230,7 @@
   <script src="/js/tether.min.js"></script>
   <script src="/js/bootstrap.min.js"></script>
   <script src="/js/jquery.scrolldepth.min.js"></script>
+  <script src="/js/pagination.min.js"></script>
   <script src="/js/script.js?v=7"></script>
 
   <!--[if lt IE 9]>
