--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -23,6 +23,9 @@ layout: default
       </div>
     </div>
     <section class="col-12 col-md-9 page--toolkit text prose order-1 order-md-2">
+      {% if page.sidenav == "accessibility_guide" %}
+        <h1>{{ page.title }}</h1>
+      {% endif %}
       {{ content }}
     </section>
   </div>
