--- a/_sass/pages/_toolkits.scss
+++ b/_sass/pages/_toolkits.scss
@@ -4,18 +4,22 @@
 }
 
 .page--toolkit {
-  h2 {
+  h1 {
     font-size: $font-size-xxx-large;
   }
 
-  h3 {
+  h2 {
     font-size: $font-size-x-large;
   }
 
-  h4 {
+  h3 {
     font-size: $font-size-small;
     letter-spacing: 0.05em;
     line-height: 1.375;
     text-transform: uppercase;
+  }
+
+  h4 {
+    font-size: $font-size-h5;
   }
 }
