--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -32,63 +32,63 @@ h1 {
 }
 
 @include media-breakpoint-between(xs, sm) {
-  h1 {
-    font-size: $font-size-h1 * .60;
-  }
+  // h1 {
+  //   font-size: $font-size-h1 * .60;
+  // }
 
-  h2 {
-    font-size: $font-size-h2 * .65;
-  }
+  // h2 {
+  //   font-size: $font-size-h2 * .65;
+  // }
 
-  h3 {
-    font-size: $font-size-h3 * .75;
-  }
+  // h3 {
+  //   font-size: $font-size-h3 * .75;
+  // }
 
   .header-display-1 {
     font-size: $header-display-1 * .60;
   }
 
-  .header-display-2 {
-    font-size: $header-display-2 * .60;
-  }
+  // .header-display-2 {
+  //   font-size: $header-display-2 * .60;
+  // }
 
-  .header-display-4 {
-    font-size: $header-display-4 * .75;
-  }
+  // .header-display-4 {
+  //   font-size: $header-display-4 * .75;
+  // }
 
-  .header-display-5 {
-    font-size: $header-display-5 * .80;
-  }
+  // .header-display-5 {
+  //   font-size: $header-display-5 * .80;
+  // }
 }
 
 @include media-breakpoint-between(sm, md) {
-  h1 {
-    font-size: $font-size-h1 * .80;
-  }
+  // h1 {
+  //   font-size: $font-size-h1 * .80;
+  // }
 
-  h2 {
-    font-size: $font-size-h2 * .85;
-  }
+  // h2 {
+  //   font-size: $font-size-h2 * .85;
+  // }
 
-  h3 {
-    font-size: $font-size-h3 * .95;
-  }
+  // h3 {
+  //   font-size: $font-size-h3 * .95;
+  // }
 
   .header-display-1 {
     font-size: $header-display-1 * .80;
   }
 
-  .header-display-2 {
-    font-size: $header-display-2 * .80;
-  }
+  // .header-display-2 {
+  //   font-size: $header-display-2 * .80;
+  // }
 
-  .header-display-4 {
-    font-size: $header-display-4 * .85;
-  }
+  // .header-display-4 {
+  //   font-size: $header-display-4 * .85;
+  // }
 
-  .header-display-5 {
-    font-size: $header-display-5 * .90;
-  }
+  // .header-display-5 {
+  //   font-size: $header-display-5 * .90;
+  // }
 }
 
 %list-base {
