--- a/_sass/_sidenav.scss
+++ b/_sass/_sidenav.scss
@@ -8,13 +8,16 @@
     @extend %nav;
     @extend %flex-column;
     @extend %d-inline-flex;
+    width: inherit;
   }
 
   li {
     @extend %nav-item;
+    border-top: 1px solid #e6e6e6;
+    line-height: 1.3;
 
-    &:not(:last-child) {
-      @extend %mb-2;
+    &:last-child {
+      border-bottom: 1px solid #e6e6e6;
     }
 
     &:hover,
@@ -27,8 +30,6 @@
           top: 0;
           bottom: 0;
           left: 0;
-          margin-left: -16px;
-          padding-left: 11px;
           border-left: 4px solid $nav-link-border-color;
           content: "";
         }
@@ -43,8 +44,6 @@
         top: 0;
         bottom: 0;
         left: 0;
-        margin-left: -16px;
-        padding-left: 11px;
         border-left: 4px solid $nav-link-border-color;
         content: "";
       }
@@ -52,8 +51,7 @@
   }
 
   a {
-    @extend %nav-link;
     @extend %nav-link-decoration;
-    @extend %p-0;
+    border: none;
   }
 }
