--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -137,14 +137,14 @@
 }
 
 .dropdown-menu {
-  background-color: $sk-yellow;
+  background-color: $brand-gray-light;
   border: none;
   border-radius: 0 0.25rem 0.25rem 0.25rem;
   font-size: $font-size-small;
   margin-top: 0;
 
   @include media-breakpoint-up(sm) {
-    border: 1px solid #d2aa56;
+    // border: 1px solid #d2aa56;
     margin-top: -1px;
     min-width: 9rem;
     z-index: 1;
@@ -156,7 +156,7 @@
 
   &:focus,
   &:hover {
-    background-color: darken($sk-yellow, 15%);
+    background-color: $gray-lightest;
   }
 }
 
@@ -196,11 +196,11 @@
 }
 
 .dropdown-toggle[aria-expanded="true"] {
-  background-color: $sk-yellow;
+  background-color: $brand-gray-light;
   border-radius: 0.25rem 0.25rem 0 0;
 
   @include media-breakpoint-up(sm) {
-    border: 1px solid #d2aa56;
+    // border: 1px solid #d2aa56;
     border-bottom: none;
   }
 }
