--- a/_sass/pages/_services.scss
+++ b/_sass/pages/_services.scss
@@ -13,6 +13,10 @@
 
 .services-content {
   img {
-    width: 80%;
+    width: 100%;
+
+    @include media-breakpoint-up(md) {
+      width: 80%;
+    }
   }
 }
