--- a/_sass/pages/_services.scss
+++ b/_sass/pages/_services.scss
@@ -15,7 +15,7 @@
   img {
     width: 100%;
 
-    @include media-breakpoint-up(md) {
+    @include media-breakpoint-up(xl) {
       width: 80%;
     }
   }
