change culture url to values

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
             <h4>Company</h4>
             <ul>
               <li><a href="/company/about/">About</a></li>
-              <li><a href="/company/culture/">Culture</a></li>
+              <li><a href="/company/values/">Values</a></li>
               <li><a href="/company/press/">Press</a></li>
               <li><a href="/company/policies/">Policies</a></li>
             </ul>
