--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/company/about/">About Us</a>
-            <a class="dropdown-item" href="/company/culture/">Our Culture</a>
+            <a class="dropdown-item" href="/company/values/">Our Values</a>
             <a class="dropdown-item" href="/company/press/">Press</a>
           </div>
         </li>
