--- a/_sass/pages/_manifest.scss
+++ b/_sass/pages/_manifest.scss
@@ -4,7 +4,7 @@
 @import 'services';
 @import 'projects';
 @import 'project';
-@import 'culture';
+@import 'values';
 @import 'policies';
 @import 'policy';
 @import 'join';
