--- a/_includes/open_positions.html
+++ b/_includes/open_positions.html
@@ -30,8 +30,8 @@
   </p>
 
   <p>
-    For most roles, we also offer apprenticeship opportunities for post-graduate
-    professionals and internship opportunities for current or recent college graduates.
+    For most roles, we also offer paid apprenticeship opportunities for post-graduate
+    professionals and paid internship opportunities for current or recent college graduates.
     If you're interested in an apprenticeship or internship,
     please <a href="mailto:hello@skylight.digital">get in touch</a>.
   </p>
