Fix DITAP banner section appearance

--- a/_sass/pages/_ditap.scss
+++ b/_sass/pages/_ditap.scss
@@ -7,6 +7,12 @@
       padding-bottom: 3rem !important;
     }
   }
+
+  .hero-container {
+    max-width: 1140px;
+    padding-bottom: 56px;
+    padding-top: 56px;
+  }
 }
 
 .page-ditap-content {
