--- a/_sass/pages/_toolkits.scss
+++ b/_sass/pages/_toolkits.scss
@@ -23,3 +23,11 @@
     font-size: $font-size-h5;
   }
 }
+
+.page-creating-a-productive-and-collaborative-work-environment {
+  table tbody td:last-child {
+    text-align: center;
+    vertical-align: middle;
+  }
+}
+
