--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -127,7 +127,7 @@ h1 {
   ol {
     counter-reset: item;
 
-    li::before {
+    & > li::before {
       content: counter(item) '. ';
       counter-increment: item;
     }
