Style list disc

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -126,6 +126,8 @@ h1 {
     ul {
       li::before {
         content: '\25E6';
+        font-size: $font-size-small;
+        margin-top: 1px;
       }
     }
   }
