--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -79,6 +79,7 @@
 
 // Brand colors
 $sk-red: darken(#df635c, 0%);
+$sk-blue-light: darken(#dceffa, 0%);
 $sk-blue: darken(#468fba, 0%);
 $sk-blue-dark: darken(#235384, 0%);
 $sk-green: darken(#5fa373, 0%);
@@ -115,8 +116,9 @@ $gray-light: lighten($gray, 10%);
 $gray-lighter: lighten($gray, 30%);
 $gray-lightest: lighten($gray, 50%);
 
-$brand-primary: $sk-blue-dark;
+$brand-primary-lightest: $sk-blue-light;
 $brand-primary-light: $sk-blue;
+$brand-primary: $sk-blue-dark;
 $brand-primary-dark: $sk-blue-dark;
 $brand-success: $sk-green;
 $brand-info: $sk-blue;
