--- a/_includes/head.html
+++ b/_includes/head.html
@@ -236,6 +236,18 @@
   <script src="/js/pagination.min.js"></script>
   <script src="/js/script.js?v=7"></script>
 
+  {% assign _scripts = '' | split: '|'
+  | push: _site_scripts
+  | push: layout.scripts
+  | push: page.scripts
+  | uniq %}
+  {% for _list in _scripts %}
+    {% for _script in _list %}
+      {% assign _src = _script.src | default: _script %}
+        <script src="{{ _src | replace: _async_marker, '' | relative_url }}"{% if _script.async or _src contains _async_marker %} async{% endif %}></script>
+    {% endfor %}
+  {% endfor %}
+
   <!--[if lt IE 9]>
     <script src="/js/html5shiv.min.js"></script>
   <![endif]-->
