Fix appendix-f tables

--- a/_sass/_tables.scss
+++ b/_sass/_tables.scss
@@ -4,3 +4,15 @@
     @extend %no-border;
   }
 }
+
+.table-even {
+  thead th {
+    width: 50%;
+  }
+}
+
+.table-small-first {
+  thead th:first-child {
+    width: 20%;
+  }
+}
