--- a/_sass/_accessibility-toolkit.scss
+++ b/_sass/_accessibility-toolkit.scss
@@ -20,4 +20,9 @@
     border: 0;
     padding: 0;
   }
+  .form-check-label {
+    padding-left: 0.5rem;
+    margin-bottom: 0; // Override default `<label>` bottom margin
+    cursor: pointer;
+  }
 }
